<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.winterolympicsquiz.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/backgroundColor"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:orientation="vertical"
        android:padding="16dp">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:src="@drawable/logo" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/question_margin"
            android:text="@string/question_first"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/answers_margin"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/salt_lake_city_radio_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/answer_salt_lake_city" />

            <RadioButton
                android:id="@+id/moscow_radio_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/answer_moscow" />

            <RadioButton
                android:id="@+id/chamonix_radio_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/answer_chamonix" />

            <RadioButton
                android:id="@+id/ctockholm_radio_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/answer_stockholm" />

        </RadioGroup>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/question_margin"
            android:text="@string/question_second"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/answers_margin"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/figure_skating_radio_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/answer_figure_skating" />

            <RadioButton
                android:id="@+id/ski_jumping_radio_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/answer_ski_jumping" />

            <RadioButton
                android:id="@+id/speed_skating_radio_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/answer_speed_skating" />

            <RadioButton
                android:id="@+id/bobsled_radio_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/answer_bobsled" />

        </RadioGroup>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/question_margin"
            android:text="@string/question_third"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/answer_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/answers_margin"
            android:hint="@string/placeholder_name_of_the_sport"
            android:inputType="textCapWords" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/question_margin"
            android:text="@string/question_fourth"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/answers_margin"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/united_states_checkbox_radio_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/answer_united_states" />

            <RadioButton
                android:id="@+id/norway_radio_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/answer_norway" />

            <RadioButton
                android:id="@+id/canada_radio_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/answer_canada" />

            <RadioButton
                android:id="@+id/sweeden_radio_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/answer_sweden" />

        </RadioGroup>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/question_margin"
            android:text="@string/question_fifth"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <CheckBox
            android:id="@+id/south_africa_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/answer_south_africa" />

        <CheckBox
            android:id="@+id/australia_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/answer_australia" />

        <CheckBox
            android:id="@+id/new_zeland_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/answer_new_zealand" />

        <CheckBox
            android:id="@+id/argentina_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/answers_margin"
            android:text="@string/answer_argentina" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/question_margin"
            android:text="@string/question_sixth"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/answers_margin"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/the_danish_gymnastics_team_radio_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/answer_the_danish_gymnastics_team" />

            <RadioButton
                android:id="@+id/the_jamaican_bobsled_team_radio_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/answer_the_jamaican_bobsled_team" />

            <RadioButton
                android:id="@+id/the_russian_synchronized_swimming_team_radio_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/answer_the_russian_synchronized_swimming_team" />

            <RadioButton
                android:id="@+id/the_japanese_baseball_team_radio_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/answer_the_japanese_baseball_team" />
        </RadioGroup>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/question_margin"
            android:text="@string/question_seventh"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/answers_margin"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/calgary_radio_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/answer_calgary" />

            <RadioButton
                android:id="@+id/edmonton_radio_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/answer_edmonton" />

            <RadioButton
                android:id="@+id/montreal_radio_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/answer_montreal" />

            <RadioButton
                android:id="@+id/ottawa_radio_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/answer_ottawa" />
        </RadioGroup>

        <Button
            android:id="@+id/submit_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:onClick="submit"
            android:text="@string/answer_submit" />

    </LinearLayout>

</ScrollView>